<resources>
    <string name="app_name">Food for Thought</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_recipes_text_1">You don\'t have any recipes yet</string>
    <string name="no_recipes_text_2">Press the button to add one</string>
    <string name="a_plus_sign">A plus sign</string>
    <string name="cook_time">Cook Time</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="method">Method</string>
    <string name="add_step">Add Step</string>
    <string name="description">Description</string>

    // cook time spinner values
    <string-array name="cookTimeSpinner">
        <item>Short</item>
        <item>Medium</item>
        <item>Long</item>
    </string-array>
</resources>